finalização páginas principais

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <div class="card">
             <img src="img/palestrante_5.jpeg" class="card-img-top" alt="Palestrante 5">
             <div class="card-body">
-              <h5 class="card-title">Dr. Roberto Mendes</h5>
+              <h5 class="card-title">Prof. Roberto Mendes</h5>
               <p class="card-text">Especialista em Blockchain.</p>
             </div>
           </div>
