--- a/inscricao.html
+++ b/inscricao.html
@@ -1,20 +1,243 @@
-<form action="processo_inscricao.php" method="POST">
-    Nome: <input type="text" name="nome" required><br>
-    CPF: <input type="text" name="cpf" required><br>
-    E-mail: <input type="email" name="email" required><br>
-    Senha: <input type="password" name="senha" required><br>
-    Telefone: <input type="text" name="telefone"><br>
-    Endereço: <input type="text" name="endereco"><br>
-    Cidade: <input type="text" name="cidade"><br>
-    Estado: <input type="text" name="estado"><br>
-    País: <input type="text" name="pais"><br>
-    Titulação:
-    <select name="titulacao">
-      <option value="Graduação">Graduação</option>
-      <option value="Mestre">Mestre</option>
-      <option value="Doutor">Doutor</option>
-    </select><br>
-    Instituição: <input type="text" name="instituicao"><br>
-    <button type="submit">Enviar</button>
-  </form>
-  
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inscrição | CCSBT 2025</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    header {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 80px 0;
+      text-align: center;
+      position: relative;
+    }
+
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    header .container {
+      position: relative;
+      z-index: 2;
+    }
+
+    header h1 {
+      font-family: 'Anton', sans-serif;
+      font-size: 3rem;
+      text-transform: uppercase;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
+
+    section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 30px;
+      font-weight: 700;
+    }
+
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    footer {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      position: relative;
+      border-top: 5px solid #fff;
+    }
+
+    footer::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    footer p {
+      position: relative;
+      z-index: 2;
+      font-size: 1.2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      margin: 0;
+      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">CCSBT</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">INÍCIO</a></li>
+          <li class="nav-item"><a class="nav-link" href="programacao.html">PROGRAMAÇÃO</a></li>
+          <li class="nav-item"><a class="nav-link" href="local.html">LOCALIZAÇÃO</a></li>
+          <li class="nav-item"><a class="nav-link active" href="inscricao.html">INSCRIÇÃO</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <h1>Inscreva-se no CCSBT 2025</h1>
+      <p class="lead">Garanta sua vaga e participe do maior evento científico tecnológico do ano!</p>
+    </div>
+  </header>
+
+  <!-- Conteúdo -->
+  <main class="container my-5">
+    <section>
+      <h2>Formulário de Inscrição</h2>
+      <form id="form-inscricao" method="POST">
+        <fieldset>
+            <div class="mb-3">
+            <label for="cpf" class="form-label">CPF</label>
+            <input type="text" class="form-control" id="cpf" name="cpf" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="nome" class="form-label">Nome completo</label>
+            <input type="text" class="form-control" id="nome" name="nome" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="senha" class="form-label">Senha</label>
+            <input type="text" class="form-control" id="senha" name="senha" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="telefone" class="form-label">Telefone (com DDD)</label>
+            <input type="tel" class="form-control" id="telefone" name="telefone" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="endereco" class="form-label">Endereço</label>
+            <input type="text" class="form-control" id="endereco" name="endereco" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="cidade" class="form-label">Cidade</label>
+            <input type="text" class="form-control" id="cidade" name="cidade" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="estado" class="form-label">Estado</label>
+            <input type="text" class="form-control" id="estado" name="estado" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="pais" class="form-label">País</label>
+            <input type="text" class="form-control" id="pais" name="pais" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="titulacao" class="form-label">Titulação</label>
+            <select class="form-select" id="titulacao" name="titulacao" required>
+                <option value="">Selecione...</option>
+                <option value="ouvinte">Graduação</option>
+                <option value="apresentador">Mestre</option>
+                <option value="palestrante">Doutor</option>
+            </select>
+            </div>
+
+            <div class="mb-3">
+            <label for="instituicao" class="form-label">Instituição de Ensino / Universidade</label>
+            <input type="text" class="form-control" id="instituicao" name="instituicao" required>
+            </div>
+
+            <button type="submit" id="submit" name="submit" class="btn btn-primary w-100">Enviar Inscrição</button>
+        </fieldset>
+      </form>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 CCSBT - Congresso Científico da Sociedade Brasileira de Tecnologia</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Exemplo: máscara para CPF (formato 000.000.000-00)
+    document.getElementById("cpf").addEventListener("input", function (e) {
+      let cpf = e.target.value.replace(/\D/g, ""); // remove não-dígitos
+      cpf = cpf.replace(/(\d{3})(\d)/, "$1.$2");
+      cpf = cpf.replace(/(\d{3})(\d)/, "$1.$2");
+      cpf = cpf.replace(/(\d{3})(\d{1,2})$/, "$1-$2");
+      e.target.value = cpf;
+    });
+
+    // Exemplo: máscara para telefone (formato (00) 00000-0000)
+    document.getElementById("telefone").addEventListener("input", function (e) {
+      let tel = e.target.value.replace(/\D/g, "");
+      tel = tel.replace(/^(\d{2})(\d)/g, "($1) $2");
+      tel = tel.replace(/(\d{5})(\d)/, "$1-$2");
+      e.target.value = tel;
+    });
+
+    document.getElementById("form-inscricao").addEventListener("submit", function (e) {
+      e.preventDefault(); // impede o envio padrão
+
+      const form = e.target;
+      const formData = new FormData(form); // pega os dados do form
+
+      fetch("processo_inscricao.php", {
+        method: "POST",
+        body: formData
+      })
+      .then(response => response.text()) // espera a resposta do PHP
+      .then(data => {
+        alert(data); // mostra a resposta
+        form.reset(); // limpa o formulário
+      })
+      .catch(error => {
+        alert(error);
+      });
+    });
+  </script>
+</body>
+</html>
