--- a/local.html
+++ b/local.html
@@ -1,3 +1,167 @@
-<h2>Local do Evento</h2>
-<p>UFJF – Campus Universitário, Juiz de Fora - MG</p>
-<iframe src="https://www.google.com/maps/embed?pb=..." width="600" height="450"></iframe>
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Localização | CCSBT 2025</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    header {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 80px 0;
+      text-align: center;
+      position: relative;
+    }
+
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    header .container {
+      position: relative;
+      z-index: 2;
+    }
+
+    header h1 {
+      font-family: 'Anton', sans-serif;
+      font-size: 3rem;
+      text-transform: uppercase;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
+
+    section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 30px;
+      font-weight: 700;
+    }
+
+    .mapa iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+
+    footer {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      position: relative;
+      border-top: 5px solid #fff;
+    }
+
+    footer::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    footer p {
+      position: relative;
+      z-index: 2;
+      font-size: 1.2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      margin: 0;
+      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">CCSBT</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">INÍCIO</a></li>
+        <li class="nav-item"><a class="nav-link" href="programacao.html">PROGRAMAÇÃO</a></li>
+        <li class="nav-item"><a class="nav-link active" href="local.html">LOCALIZAÇÃO</a></li>
+        <li class="nav-item"><a class="nav-link" href="inscricao.html">INSCRIÇÃO</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Header -->
+<header>
+  <div class="container">
+    <h1>Local do Evento</h1>
+    <p class="lead">Veja como chegar ao 1º CCSBT</p>
+  </div>
+</header>
+
+<!-- Conteúdo -->
+<main class="container my-5">
+  <section class="text-center mb-5">
+    <h2>Endereço</h2>
+    <p><strong>Universidade Federal de Juiz de Fora (UFJF)</strong><br>
+    Avenida Presidente Itamar Franco, 3.000 - Bairro São Pedro<br>
+    Juiz de Fora - MG, 36038-330</p>
+  </section>
+
+  <section class="mb-5">
+    <h2 class="text-center">Mapa</h2>
+    <div class="mapa my-4">
+      <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3705.1804343139156!2d-43.37157092507481!3d-21.773276680068896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x989b9f99b33491%3A0xd9b48a8f80341c0d!2sUniversidade%20Federal%20de%20Juiz%20de%20Fora!5e0!3m2!1spt-BR!2sbr!4v1746905689308!5m2!1spt-BR!2sbr" 
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="text-center">Como Chegar</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <h5>🚌 Transporte Público</h5>
+        <p>Linhas de ônibus que passam pela UFJF: 525, 545, 555 e 560.</p>
+      </div>
+      <div class="col-md-6">
+        <h5>🚗 De Carro</h5>
+        <p>Entrada principal pela Av. Itamar Franco. Estacionamento disponível no campus (vagas limitadas).</p>
+      </div>
+    </div>
+  </section>
+</main>
+
+<!-- Footer -->
+<footer>
+  <p>© 2025 CCSBT - Congresso Científico da Sociedade Brasileira de Tecnologia</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
