--- a/programacao.html
+++ b/programacao.html
@@ -1,13 +1,226 @@
-<h2>Dia 1 - 15/10</h2>
-<table border="1">
-  <tr><th>Horário</th><th>Atividade</th></tr>
-  <tr><td>09:00</td><td>Abertura</td></tr>
-  <tr><td>10:00</td><td>Palestra: IA no Século XXI</td></tr>
-</table>
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<h2>Dia 2 - 16/10</h2>
-<table border="1">
-  <tr><th>Horário</th><th>Atividade</th></tr>
-  <tr><td>09:00</td><td>Workshop de Robótica</td></tr>
-  <tr><td>14:00</td><td>Painel de Discussões</td></tr>
-</table>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Programação | CCSBT 2025</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    header {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 80px 0;
+      text-align: center;
+      position: relative;
+    }
+
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    header .container {
+      position: relative;
+      z-index: 2;
+    }
+
+    header h1 {
+      font-family: 'Anton', sans-serif;
+      font-size: 3rem;
+      text-transform: uppercase;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
+
+    section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 30px;
+      font-weight: 700;
+    }
+
+    .tabela-programacao {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .table th {
+      background-color: #343a40;
+      color: white;
+      text-align: center;
+    }
+
+    footer {
+      background-image: url('img/hightech_background.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      position: relative;
+      border-top: 5px solid #fff;
+    }
+
+    footer::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    footer p {
+      position: relative;
+      z-index: 2;
+      font-size: 1.2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      margin: 0;
+      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">CCSBT</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">INÍCIO</a></li>
+        <li class="nav-item"><a class="nav-link active" href="programacao.html">PROGRAMAÇÃO</a></li>
+        <li class="nav-item"><a class="nav-link" href="local.html">LOCALIZAÇÃO</a></li>
+        <li class="nav-item"><a class="nav-link" href="inscricao.html">INSCRIÇÃO</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Header -->
+<header>
+  <div class="container">
+    <h1>Programação do Evento</h1>
+    <p class="lead">Confira abaixo a grade completa do 1º CCSBT</p>
+  </div>
+</header>
+
+<!-- Conteúdo -->
+<main class="container my-5">
+  <section>
+    <h2>Dia 1 – 29 de Junho</h2>
+    <div class="tabela-programacao">
+      <table class="table table-bordered">
+        <colgroup>
+          <col style="width: 20%;">
+          <col style="width: 50%;">
+          <col style="width: 30%;">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>Horário</th>
+            <th>Atividade</th>
+            <th>Palestrante / Local</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>08:00 - 09:00</td>
+            <td>Credenciamento e Boas-Vindas</td>
+            <td>Auditório Central</td>
+          </tr>
+          <tr>
+            <td>09:00 - 11:00</td>
+            <td>Palestra de Abertura: O Futuro da Inovação Tecnológica com aplicação da Inteligêngia Artificial</td>
+            <td>Dr. Eduardo Silva - Auditório Central</td>
+          </tr>
+          <tr>
+            <td>11:00 - 12:00</td>
+            <td>Coffe Break</td>
+            <td>Auditório Central</td>
+          </tr>
+          <tr>
+            <td>12:00 - 14:00</td>
+            <td>Computação Quântica: impacto e perspectivas</td>
+            <td>Profa. Maria Souza - Auditório Central</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <section class="mt-5">
+    <h2>Dia 2 – 30 de Junho</h2>
+    <div class="tabela-programacao">
+      <table class="table table-bordered">
+        <colgroup>
+          <col style="width: 20%;">
+          <col style="width: 50%;">
+          <col style="width: 30%;">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>Horário</th>
+            <th>Atividade</th>
+            <th>Palestrante / Local</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>08:00 - 10:00</td>
+            <td>Protegendo-se no Mundo Digital</td>
+            <td>Dr. Carlos Almeida - Auditório Central</td>
+          </tr>
+          <tr>
+            <td>10:00 - 12:00</td>
+            <td>Imersão Virtual na Educação</td>
+            <td>Profa. Ana Costa - Audiório Central</td>
+          </tr>
+          <tr>
+            <td>12:00 - 13:00</td>
+            <td>Coffe Break</td>
+            <td>Auditório Central</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>13:00 - 15:00</td>
+            <td>Block Chain e o Futuro da Economia</td>
+            <td>Prof. Roberto Mendes - Auditório Central</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+</main>
+
+<!-- Footer -->
+<footer>
+  <p>© 2025 CCSBT - Congresso Científico da Sociedade Brasileira de Tecnologia</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
